fix: wrong index initialization order